--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .container {
     background-color: #c00025;
     width: 100%;
+    height: 700px;
     max-width: 550px;
     border-radius: 15px;
     border: 2px solid grey;
     padding-bottom: 25px;
 }
 .display {
-    margin-top: 25px;
+    margin: 0 auto 20px;
     height: 100px;
     width: 450px;
     border-radius: 50px;
@@ -19,4 +20,46 @@
     align-items: flex-end;
     padding-right: 8%;
     font-size: 5.0rem;
-  }
+}
+.logo-container {
+margin: 5%;
+}
+.App {
+    display: flex;
+    justify-content: center;
+}
+.leftSide {
+    display: flex;
+    flex-direction: column;
+}
+.general_button {
+    border: none;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    box-shadow: 0px 5px 0px black;
+    font-size: 1.5rem;
+    color: white;
+}
+.special_button {
+    background-color: #2160B0;
+}
+.operator_button {
+    background-color: #3DB3E4;
+}
+.number_button {
+    background-color: #123B78;
+}
+
+.numButtonContainer {
+
+}
+
+.opButtonContainer {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+
+}
