--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .container {
     background-color: #c00025;
     width: 100%;
-    height: 700px;
     max-width: 550px;
     border-radius: 15px;
     border: 2px solid grey;
@@ -22,7 +21,7 @@
     font-size: 5.0rem;
 }
 .logo-container {
-margin: 5%;
+    margin: 5%;
 }
 .App {
     display: flex;
@@ -35,11 +34,13 @@ margin: 5%;
 .general_button {
     border: none;
     border-radius: 50%;
-    width: 80px;
-    height: 80px;
+    width: 90px;
+    height: 90px;
     box-shadow: 0px 5px 0px black;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     color: white;
+    margin: 10px 23px;
+    outline: none;
 }
 .special_button {
     background-color: #2160B0;
@@ -51,15 +52,11 @@ margin: 5%;
     background-color: #123B78;
 }
 
-.numButtonContainer {
-
-}
-
 .opButtonContainer {
-    width: 20%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-content: space-around;
+    justify-content: center;
+    align-items: center;
 
 }
